# rob534

./: .gitignore
HW1/hw1-code/: hw1-code.cabal  maze1_rrt.pgm  maze1_solved.pgm  maze1_solved_4.pgm  maze2_rrt.pgm  maze2_solved.pgm  maze2_solved_4.pgm  stack.yaml
HW1/hw1-code/.stack-work/install/x86_64-osx/lts-7.18/8.0.1/doc/pgm-0.1.4/: LICENSE
HW1/hw1-code/.stack-work/install/x86_64-osx/lts-7.18/8.0.1/flag-cache/: PSQueue-1.1-DNpDWrWkOL4BwO0e9gII0d  hw1-code-0.1.0.0-2jDoDN2CykVF46KCIrRsr9  loop-0.3.0-98VH1UqsOHy2KxBxA55ICY  matrix-0.3.5.0-Ai5MbZhiOOC3qmPfUuhoAV  parsec-3.1.11-37j7M1YEHqtEooY7BpJdri  pgm-0.1.4-JnQ1IdsQ5XPISkZjx2nGHv  timeit-1.0.0.0-AIYmkSYH52M8DlaIvcyDoF
HW1/hw1-code/.stack-work/install/x86_64-osx/lts-7.18/8.0.1/pkgdb/: hw1-code-0.1.0.0-8aYr2pHdeuo3H0LfJWJHED.conf  package.cache  pgm-0.1.4-JnQ1IdsQ5XPISkZjx2nGHv.conf
HW1/hw1-code/app/: Main.hs
HW1/hw1-code/src/: #AStar.hs#  #MyTypes.hs#  .#AStar.hs  .#MyTypes.hs  AStar.hs  AStar.hs~  Display.hs  Display.hs~  FileHandle.hs  FileHandle.hs~  Lib.hs  MyTypes.hs  MyTypes.hs~  RRT.hs
HW2/: K.m  branchAndBound.m  canReachPoint.m  covPost.m  fArv.m  getInfo.m  getNeighbors.m  greedy.m  upperBound.m
HW3/hw3-code/: .hw3-code.cabal.swp  LICENSE  hw3-code.cabal
HW3/hw3-code/src/: Lib.hs  MDP.hs  Maze.hs
Project/: sdm-project.cabal  stack.yaml
Project/app/: Main.hs
Project/src/: ConstructVis.hs  PolyVis.hs  VertexPolygon.hs  VisPath.hs
Project/test/: ConstructVisTest.hs  Spec.hs  VertexPolygonTest.hs
(+11 files in other folders)
