name:                hw3-code
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/eklinkhammer/hw3-code#readme
license:             BSD3
license-file:        LICENSE
author:              Eric Klinkhammer
maintainer:          eklinkhammer@gmail.com
copyright:           2017 Eric Klinkhammer
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Maze
                     , MDP
  build-depends:       base >= 4.7 && < 5
                     , random
                     , matrix
  default-language:    Haskell2010

executable hw3-code-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hw3-code
  default-language:    Haskell2010

test-suite hw3-code-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hw3-code
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/eklinkhammer/hw3-code
